welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:29: error: identifier expected but 'var' found.
def getMondeLargeur(var nb: Int, var T:Array)
                    ^Array1:63: error: ':' expected but '}' found.
}
^